Fixed AFFXT2-533: As low As text is not aligned with Affirm icon on PDP and Cart pages - Fixed text alignment

--- a/view/frontend/web/affirm-promo.css
+++ b/view/frontend/web/affirm-promo.css
@@ -5,3 +5,9 @@
 .affirm-promo iframe {
     max-width: 100%;
 }
+
+#learn-more img {
+    height: 1em !important;
+    margin: 0 .3em !important;
+    vertical-align: baseline !important;
+}
